# UnrealKnowledgeEngine

./: .gitignore  README.md  context.json  pyproject.toml
docs/: architecture_v4.1.md
knowledge/assets/overlays/staticmesh.collision.simple/: step_01.overlay.json
knowledge/learning_objects/staticmesh/: collision.concept.yml  collision.simple.yml  collision.troubleshoot.yml
tools/: cli.py  init_cmd.py  serve_cmd.py
tools/capture/: cmd.py
tools/capture/plugin/TutorialCapture/: TutorialCapture.uplugin  tutorial_capture.py
tools/capture/scripts/: capture_staticmesh_collision.py
tools/freshness/: cmd.py
tools/gate/: cmd.py  models.py  validator.py
tools/path_planner/: cmd.py
tools/site_gen/: cmd.py
